--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Stevenfluo.GitHub.io
-description: 
+description: Personal website
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-cayman
 
 gems:
