--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Stevenfluo.GitHub.io
-description: Personal website
+description: Hi, I'm Steven!
 google_analytics: 
 theme: jekyll-theme-cayman
 
