--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -66,8 +66,8 @@ author:
   wikipedia: null
 
 # Build settings
-# remote_theme: "mmistakes/minimal-mistakes@4.24.0"
-theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+# theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
   - jekyll-include-cache
