--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -12,5 +12,8 @@ main:
   - title: "Experience"
     url: /experience/
 
+  - title: "Projects"
+    url: /projects/
+
   - title: "CV"
     url: /cv/
