--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -57,7 +57,7 @@ author:
   stackoverflow: null
   steam: null
   tumblr: null
-  twitter: null
+  twitter: "stevenlu0"
   mastodon: null
   vine: null
   weibo: null
